--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+
+main{
+  margin-top: 50px;
+}
+
+#member-container{
+  width: 1000px;
+  margin: auto;
+  text-align: center;
+}
+
+#member-cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
