--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,18 @@ main{
 #member-cards{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+}
+
+.card{
+  width: calc(100% / 4);
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #7c7c7c;
+  border-radius: 20px;
+  list-style: none;
+}
+
+.card .item{
+  border-bottom: 1px solid #bdbdbd;
+  padding: 5px;
 }
