--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main{
 .card{
   width: calc(100% / 4);
   margin: 20px;
-  padding: 20px;
+  padding: 5px;
   border: 1px solid #7c7c7c;
   border-radius: 20px;
   list-style: none;
@@ -33,4 +33,8 @@ main{
 .card .item{
   border-bottom: 1px solid #bdbdbd;
   padding: 10px;
+}
+
+.card img{
+  width: 100%;
 }
